@@ -27,7 +27,7 @@ struct rs_job {
     /** Human-readable job operation name. */
     const char          *job_name;
     
-    rs_stream_t *stream;
+    rs_buffers_t *stream;
 
     /** Callback for each processing step. */
     rs_result           (*statefn)(rs_job_t *);
@@ -81,6 +81,9 @@ struct rs_job {
 };
 
 
-rs_job_t * rs_job_new(rs_stream_t *stream, const char *);
+rs_job_t * rs_job_new(const char *, rs_result (*statefn)(rs_job_t *));
+
 void rs_job_check(rs_job_t *job);
 const rs_stats_t *rs_job_statistics(rs_job_t *);
+
+int rs_job_input_is_ending(rs_job_t *job);
