@@ -27,8 +27,8 @@
                  * And sons who died on the Burma Railway. */
 
 
-int rs_stream_is_empty(rs_stream_t *stream);
-int rs_stream_copy(rs_stream_t *stream, int len);
+int rs_buffers_is_empty(rs_buffers_t *stream);
+int rs_buffers_copy(rs_buffers_t *stream, int len);
 
 int rs_tube_catchup(rs_job_t *);
 void rs_blow_literal(rs_job_t *, void const *buf, size_t len);
@@ -36,7 +36,7 @@ void rs_blow_copy(rs_job_t *, int len);
 int rs_tube_is_idle(rs_job_t const *);
 void rs_check_tube(rs_job_t *);
 
-void rs_stream_check_exit(rs_stream_t const *);
+void rs_buffers_check_exit(rs_buffers_t const *);
 
 void rs_scoop_advance(rs_job_t *, size_t len);
 rs_result rs_scoop_readahead(rs_job_t *, size_t len, void **ptr);
